# cpp_hws

./: README.md
hwh/: README.md
hwh/lvl_1-2/: CMakeLists.txt  README.md  tests_time.txt
hwh/lvl_1-2/my_tests/: test_1.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt
hwh/lvl_1-2/my_tests/answers/: ans_3.txt  ans_5.txt  ans_6.txt
hwh/lvl_1-2/src/: main.cpp
hwh/lvl_3/: CMakeLists.txt  README.md  tests_time.txt
hwh/lvl_3/include/: strs_pair.hpp
hwh/lvl_3/src/: main.cpp  strs_pair.cpp  test.cpp
hwh/lvl_3/tests/: test_10.txt  test_2.txt  test_3.txt  test_5.txt  test_6.txt  test_7.txt  test_9.txt
hwh/lvl_3/tests/answers/: ans_10.txt  ans_3.txt  ans_4.txt  ans_7.txt  ans_8.txt
hwh/lvl_4/: README.md
hwh/lvl_4/dictionary/: CMakeLists.txt
hwh/lvl_4/dictionary/my_tests/: test_2.txt
hwh/lvl_4/dictionary/my_tests/answers/: ans_2.txt  ans_4.txt  ans_7.txt  ans_8.txt
hwh/lvl_4/dictionary/src/: main.cpp
hwh/lvl_4/lib/: CMakeLists.txt  hashtable.hpp
hwh/lvl_4/lib/hashtable/: CMakeLists.txt  hashtable.hpp
hwh/lvl_4/lib/include/hashtable/: hashtable.hpp
hwh/lvl_4/lib/unit_tests/: CMakeLists.txt  test_ctor.cpp  test_erase.cpp  test_find.cpp  test_insert.cpp  test_resize.cpp
hwh/lvl_4/quads/: CMakeLists.txt
hwh/lvl_4/quads/include/: strs_pair.hpp
hwh/lvl_4/quads/src/: main.cpp  strs_pair.cpp
hwh/lvl_4/quads/tests/: test_1.txt  test_4.txt  test_8.txt
hwh/lvl_4/quads/tests/answers/: ans_1.txt  ans_2.txt  ans_5.txt  ans_9.txt
